kubernetes/geoquiz-deployment.yml
 
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: geoquiz
  name: geoquiz
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: geoquiz
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: geoquiz
    spec:
      containers:
      - env:
        - name: FLASK_ENV
          value: production
        - name: APP_SETTINGS
          value: project.config.ProductionConfig
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: user
              name: postgres-credentials
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres-credentials
        image: erikanderson7/geoquiz:latest
        imagePullPolicy: Always
        name: geoquiz
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
