kubernetes/geoquiz-service.yml
apiVersion: v1
kind: Service
metadata:
  name: geoquiz
  labels:
    service: geoquiz
spec:
  selector:
    app: geoquiz
  ports:
  - port: 5000
    targetPort: 5000
