kubernetes/multiplayer-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: multiplayer-db
  labels:
    service: multiplayer-db
spec:
  selector:
    service: multiplayer-db
  type: ClusterIP
  ports:
  - port: 27017
